Allow changing the filter of a layer

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -726,7 +726,8 @@
                 "buttonTextNoFilter": "Ausgewählten Layer hinzufügen",
                 "valueFilter": "Wertefilter",
                 "timeRangeFilter": "Zeitraumfilter",
-                "pointInTimeFilter": "Zeitpunktfilter"
+                "pointInTimeFilter": "Zeitpunktfilter",
+                "buttonTextChangeFilter": "Filter auf Layer anwenden"
             }
         }
     },
