Better date validation
See also https://redmine-koala.bfs.de/issues/1068 which this fixes as well.

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -19,6 +19,13 @@
             "dspSignNotInLastJoiner": " noch "
         }
     },
+    "Koala.util.Filter": {
+        "statics": {
+            "warnMsgEndBeforeStart": "Startwert muss vor Endwert liegen.",
+            "warnMsgExceedsMaxDuration": "Startwert und Endwert liegen zu weit auseinander.",
+            "msgNotBetweenMinMax": "Datum/Uhrzeit liegen nicht im erlaubten Wertebereich"
+        }
+    },
     "Koala.util.String": {
         "statics": {
             "defaultDateFormat": "d.m.Y H:i:s"
@@ -53,15 +60,6 @@
             "data": {
                 "tooltip": "Klicken, um Sprache auszuwählen"
             }
-        }
-    },
-    "Koala.view.form.LayerFilter": {
-        "config": {
-            "format": "d.m.Y H:i"
-        },
-        "statics": {
-            "warnMsgEndBeforeStart": "Startwert muss vor Endwert liegen.",
-            "warnMsgExceedsMaxDuration": "Startwert und Endwert liegen zu weit auseinander."
         }
     },
     "Koala.view.form.field.SearchCombo": {
