--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -49,6 +49,14 @@
             }
         }
     },
+    "Koala.view.component.D3Chart": {
+        "config": {
+            "data": {
+                "confirmDeleteTitleTpl": "en:Serie {0} entfernen?",
+                "confirmDeleteMsgTpl": "en:Möchten sie die Serie <b>{0}</b> aus dem Graphen entfernen?"
+            }
+        }
+    },
     "Koala.view.chart.Bar": {
         "config": {
             "data": {
