--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -45,7 +45,8 @@
         "config": {
             "data": {
                 "confirmDeleteTitleTpl": "Serie {0} entfernen?",
-                "confirmDeleteMsgTpl": "Möchten sie die Serie <b>{0}</b> aus dem Graphen entfernen?"
+                "confirmDeleteMsgTpl": "Möchten sie die Serie <b>{0}</b> aus dem Graphen entfernen?",
+                "noDataAvailableText": "Für den ausgewählten Zeitraum existieren keine Daten. Bitte wählen Sie einen anderen Zeitraum aus."
             }
         }
     },
