Add no data found message to locale foun (timeseries)

--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -54,7 +54,8 @@
         "config": {
             "data": {
                 "confirmDeleteTitleTpl": "fr:Serie {0} entfernen?",
-                "confirmDeleteMsgTpl": "fr:Möchten sie die Serie <b>{0}</b> aus dem Graphen entfernen?"
+                "confirmDeleteMsgTpl": "fr:Möchten sie die Serie <b>{0}</b> aus dem Graphen entfernen?",
+                "noDataAvailableText": "fr:Für den ausgewählten Zeitraum existieren keine Daten. Bitte wählen Sie einen anderen Zeitraum aus."
             }
         }
     },
