--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -55,6 +55,67 @@
             }
         }
     },
+    "Koala.view.container.styler.Filter": {
+        "config": {
+            "data": {
+                "attributeComboLabel": "fr:Attribut",
+                "operatorComboLabel": "fr:Operator",
+                "literalNumberField1Label": "fr:Untere Grenze",
+                "literalNumberField2Label": "fr:Wert",
+                "literalTextFieldLabel": "fr:'Is like' Muster",
+                "upperBoundaryText": "fr:Obere Grenze",
+                "valueText": "fr:Wert",
+                "isLikeText": "fr:'Is like' Muster"
+            }
+        }
+    },
+    "Koala.view.container.styler.Rule": {
+        "config": {
+            "data": {
+                "titlePrefix": "fr:Feature Style Regel",
+                "removeRuleButtonText": "fr:Diese Regel entfernen"
+            }
+        }
+    },
+    "Koala.view.container.styler.Rules": {
+        "config": {
+            "data": {
+                "addRuleButtonText": "fr:Regel hinzufügen"
+            }
+        }
+    },
+    "Koala.view.container.styler.ScaleDenominator": {
+        "config": {
+            "data": {
+                "title": "fr:Maßstabsbegrenzung verwenden",
+                "operatorComboLabel": "fr:Operator",
+                "literalNumberField1Label": "fr:Untere Grenze",
+                "literalNumberField2Label": "fr:Obere Grenze"
+            }
+        }
+    },
+    "Koala.view.container.styler.Styler": {
+        "config": {
+            "data": {
+                "missingOrInvalidLayerName": "fr:'layerName' ist obligatorisch und muss einen NameSpace beinhalten",
+                "genericError": "fr:Ein unbekannter Fehler ist aufgetreten",
+                "failedToFetch": "fr:Der aktuelle Style konnte nicht gelesen werden",
+                "titlePrefix": "fr:Styling ",
+                "btnTextReloadCurrentStyle": "fr:Auf original Style zurücksetzen",
+                "btnTextApplyAndSave": "fr:Style speichern",
+                "dspLayerName": "fr:"
+            }
+        }
+    },
+    "Koala.view.container.styler.Symbolizer": {
+        "config": {
+            "data": {
+                "title": "fr:Symbol",
+                "windowTitle": "fr:Symbol",
+                "symbolizerFieldSetHtml": "fr:Zum bearbeiten klicken"
+            }
+        }
+    },
     "Koala.view.form.ImportLocalDataModel": {
         "config": {
             "data": {
