Fix spelling mistakes

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -112,7 +112,7 @@
             "data": {
                 "title": "Symbol",
                 "windowTitle": "Symbol",
-                "symbolizerFieldSetHtml": "Zum bearbeiten klicken"
+                "symbolizerFieldSetHtml": "Zum Bearbeiten klicken"
             }
         }
     },
