--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -112,7 +112,7 @@
             "data": {
                 "title": "en:Symbol",
                 "windowTitle": "en:Symbol",
-                "symbolizerFieldSetHtml": "en:Zum bearbeiten klicken"
+                "symbolizerFieldSetHtml": "en:Zum Bearbeiten klicken"
             }
         }
     },
