--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -112,7 +112,7 @@
             "data": {
                 "title": "fr:Symbol",
                 "windowTitle": "fr:Symbol",
-                "symbolizerFieldSetHtml": "fr:Zum bearbeiten klicken"
+                "symbolizerFieldSetHtml": "fr:Zum Bearbeiten klicken"
             }
         }
     },
